# uvie-rs-win

./: .gitattributes  .gitignore  Cargo.toml  README.md  uvie-rs-win.sample.json
.github/workflows/: release.yml
docs/: release-qa.md
src/: context.rs  injector.rs  lib.rs  main.rs  profile.rs  session.rs  telex_policy.rs
tests/: edit_trace.rs  edit_traces.json  telex_corpus.json
uvie-rs-win/: README.md
uvie-rs-win/src/: main.rs  session.rs
uvie-rs-win/tests/: telex_corpus.json  telex_corpus.rs
